# nlp_classificacao_texto_spacy

./: .env.example  .gitignore  README.md  modelo.py  modelo_download_pt_br.txt  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
examples/: sample_events.csv
src/token_efficient_nlp/: __init__.py  api.py  cli.py  metrics.py  model.py  preprocessing.py  providers.py  router.py
tests/: test_model.py  test_providers.py  test_router.py
