[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "token-efficient-nlp"
version = "1.0.0"
description = "Local-first NLP classification with selective OpenAI and Anthropic fallback."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vinicius de Sousa" }]
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.7",
  "scikit-learn>=1.3",
  "spacy>=3.7",
]

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.29"]
openai = ["openai>=1.40", "tiktoken>=0.7"]
anthropic = ["anthropic>=0.34"]
all = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "openai>=1.40",
  "tiktoken>=0.7",
  "anthropic>=0.34",
]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
token-nlp = "token_efficient_nlp.cli:main"
token-nlp-api = "token_efficient_nlp.api:run"

[tool.hatch.build.targets.wheel]
packages = ["src/token_efficient_nlp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
